# simjuno

./: .gitignore  CMakeCache.txt  CMakeLists.txt  GNUmakefile  Makefile  README.md  a.out  calorimeter_histogram.py  cmake_install.cmake  main.cc  readme  simjuno.cc
RecTimeLikeAlg/: CMakeLists.txt
RecTimeLikeAlg/include/: RecTimeLikeAlg.h
RecTimeLikeAlg/share/: test.py  time_like_rec.py
RecTimeLikeAlg/src/: RecTimeLikeAlg.cc  RecTimeLikeAlg.h
_BUILD/: basic.mac  basic2.mac  fit2dHist.cpp  gamma_basic.mac  op_basic.mac  op_basic2.mac  op_para.mac  simjuno.cbp  test_out.cpp  time_script.cpp  vertex_script.cpp
_BUILD/macros/: basic_e-_1MeV.mac  basiclong.mac  optPhoton_10m.mac
backup/PhysiSim/.svn/: all-wcprops  entries
backup/PhysiSim/amd64_linux26/: PhysiSim.in  PhysiSim.make  PhysiSim_dependencies.make  amd64_linux26.make  constituents.make  make.in  setup.make
backup/PhysiSim/cmt/: cleanup.csh  cleanup.sh  install.history  setup.csh  setup.sh
backup/PhysiSim/data/: C12NeutronCaptureGammas.txt  C13NeutronCaptureGammas.txt  Cr50NeutronCaptureGammas.txt  Cr53NeutronCaptureGammas.txt  Fe54NeutronCaptureGammas.txt  Fe58NeutronCaptureGammas.txt  Gd155NDTNeutronCaptureGammas.txt  Gd155NeutronCaptureGammas.txt  Gd157NeutronCaptureGammas.txt  N14NeutronCaptureGammas.txt  Ni60NeutronCaptureGammas.txt  Ni64NeutronCaptureGammas.txt  O16NeutronCaptureGammas.txt  O17NeutronCaptureGammas.txt  P31NeutronCaptureGammas.txt  S33NeutronCaptureGammas.txt  S34NeutronCaptureGammas.txt  S36NeutronCaptureGammas.txt  Si28NeutronCaptureGammas.txt  Si29NeutronCaptureGammas.txt  gdcap_spec.root  (+1 more)
include/: AnalysisManager.hh  AnalysisManagerMessenger.hh  B2PrimaryGeneratorAction.hh  DetectorConstruction.hh  DsG4OpAbsReemit.h  DsPhysConsOptical.h  DsPhysConsOpticalMessenger.hh  EnergyTimeHit.hh  EnergyTimeSD.hh  EventAction.hh  LSExpDetectorConstructionMaterial.hh  LSExpPhysicsList.hh  PhysicsList.hh  PhysicsList.hh.backup  PrimaryGeneratorAction.hh.archive  RunAction.hh  StackingAction.hh
macros/: basic.mac  boxMesh.mac  draw.C  gps.mac  optPhoton.mac  optPhoton_0m.mac  optPhoton_10m.mac  optPhoton_15m.mac  ui.mac
result/: PE.root  time.root
scripts/: launch.sh  test_out.cpp
src/: ActionInitialization.cc  ActionInitialization.cc.archive  AnalysisManager.cc  AnalysisManagerMessenger.cc  B2PrimaryGeneratorAction.cc  DetectorConstruction.cc  DsG4Cerenkov.cc  DsG4OpAbsReemit.cc  DsG4ScintSimple.cc  DsG4Scintillation.cc  DsPhysConsOptical.cc  DsPhysConsOpticalMessenger.cc  EnergyTimeHit.cc  EnergyTimeSD.cc  EventAction.cc  LSExpDetectorConstructionMaterial.cc  LSExpPhysicsList.cc  OpticalProperty.icc  PhysicsList.cc  PhysicsList.cc.archive  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.cc.archive  RunAction.cc  StackingAction.cc  SteppingAction.cc
(+90 files in other folders)
